--- a/wallpaper-engine/project.json
+++ b/wallpaper-engine/project.json
@@ -16,6 +16,10 @@
           {
             "label": "Blinky Tan",
             "value": "blinkyTan"
+          },
+          {
+            "label": "Blinky Sin",
+            "value": "blinkySin"
           }
         ],
         "order": 100,
