--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@types/lodash-es": "^4.17.6",
     "@types/node": "^17.0.18",
     "@types/webpack": "^5.28.0",
+    "@typescript-eslint/eslint-plugin": "^5.12.0",
+    "@typescript-eslint/parser": "^5.12.0",
     "copy-webpack-plugin": "^10.2.4",
+    "eslint": "^8.9.0",
     "html-webpack-plugin": "^5.5.0",
     "ts-loader": "^9.2.6",
     "ts-node": "^10.5.0",
