--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "build": "webpack",
+    "build": "NODE_ENV=production webpack",
     "dev": "webpack serve",
     "tunnel": "cloudflared tunnel --config /etc/cloudflared/config-local.yml run local"
   },
