--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "webpack-dev-server": "^4.7.4"
   },
   "dependencies": {
+    "hex-rgb": "^5.0.0",
     "lodash-es": "^4.17.21",
     "query-string": "^7.1.1"
   }
